[package]
name = "octopower"
version = "0.1.0"
edition = "2021"
description = "A client library for the Octopus Energy API"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
graphql_client = { version = "0.10.0", features = ["reqwest"] }
reqwest = { version = "0.11.8", features = ["json", "rustls-tls-webpki-roots"] }
serde = "1.0.133"
serde_json = "1.0.74"
thiserror = "1.0.30"

[dev-dependencies]
eyre = "0.6.5"
pretty_env_logger = "0.4.0"
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }
