[package]
name = "enphase-local"
version = "0.1.2"
edition = "2024"
description = "A client library for the Enphase Envoy local API."
license = "MIT OR Apache-2.0"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
repository = "https://github.com/qwandor/octopower"
keywords = ["enphase", "energy", "api", "solar"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.28", features = [
    "json",
    "rustls-tls-webpki-roots",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_repr = "0.1.20"
thiserror = "2.0.17"

[dev-dependencies]
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
