[package]
name = "octo-influx"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.5"
influx_db_client = "0.5.0"
log = "0.4.14"
octopower = { version = "0.1.0", path = "../octopower" }
pretty_env_logger = "0.4.0"
serde = "1.0.133"
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.5.8"
url = { version = "2.2.2", features = ["serde"] }
