[package]
name = "octo-influx"
version = "0.1.0"
edition = "2021"
description = "A tool to import smart metering data from the Octopus Energy API into InfluxDB."
license = "MIT OR Apache-2.0"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
repository = "https://github.com/qwandor/octopower"
keywords = ["octopus", "energy", "influxdb", "smart-meter"]
categories = ["network-programming"]

[dependencies]
eyre = "0.6.5"
influx_db_client = "0.5.0"
log = "0.4.14"
octopower = { version = "0.1.0", path = "../octopower" }
pretty_env_logger = "0.4.0"
serde = "1.0.133"
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.5.8"
url = { version = "2.2.2", features = ["serde"] }
