[package]
name = "octo-influx"
version = "0.1.1"
edition = "2021"
description = "A tool to import smart metering data from the Octopus Energy API into InfluxDB."
license = "MIT OR Apache-2.0"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
repository = "https://github.com/qwandor/octopower"
keywords = ["octopus", "energy", "influxdb", "smart-meter"]
categories = ["network-programming"]

[dependencies]
eyre = "0.6.12"
influx_db_client = { version = "0.6.1", default-features = false, features = ["rustls-tls"] }
log = "0.4.27"
octopower = { version = "0.2.0", path = "../octopower" }
pretty_env_logger = "0.5.0"
serde = "1.0.219"
tokio = { version = "1.44.1", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.8.20"
url = { version = "2.5.4", features = ["serde"] }

[package.metadata.deb]
# $auto doesn't work because we don't build packages in the same container as we build the binaries.
depends = "libc6, libssl1.1, libgcc1"
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/octo-influx.toml"]
assets = [
	["target/release/octo-influx", "usr/bin/", "755"],
	["octo-influx.example.toml", "etc/octo-influx.toml", "640"],
	["README.md", "usr/share/doc/octo-influx/", "644"],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
