[package]
name = "octopower"
version = "0.2.1"
edition = "2024"
description = "A client library for the Octopus Energy API."
license = "MIT OR Apache-2.0"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
repository = "https://github.com/qwandor/octopower"
keywords = ["octopus", "energy", "api", "smart-meter"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
graphql_client = { version = "0.16.0" }
reqwest = { version = "0.12.28", features = [
    "json",
    "rustls-tls-webpki-roots",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
url = "2.5.8"

[dev-dependencies]
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
